// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton renders correctly 1`] = `
<button
  css={
    Object {
      ":hover:not(:disabled)": Object {
        "backgroundColor": "#ffffff",
        "color": "#000000",
      },
      "alignItems": "center",
      "backgroundColor": "#000000",
      "border": "none",
      "borderRadius": "4px",
      "color": "#ffffff",
      "display": "flex",
      "fontSize": "18px",
      "fontWeight": 700,
      "justifyContent": "center",
      "lineHeight": "48px",
      "minHeight": "48px",
      "paddingLeft": "25px",
      "paddingRight": "25px",
      "textAlign": "center",
      "textTransform": "uppercase",
      "transition": "0.5s ease",
      "width": undefined,
    }
  }
/>
`;

exports[`ActionButton renders correctly 2`] = `
<button
  css={
    Object {
      ":hover:not(:disabled)": Object {
        "backgroundColor": "#ffffff",
        "color": "#000000",
      },
      "@media screen and (max-width: 450px)": Object {
        "paddingLeft": "4%",
        "paddingRight": "4%",
        "width": "92%",
      },
      "alignItems": "center",
      "backgroundColor": "#000000",
      "border": "solid 2px #ffffff",
      "borderRadius": "28px",
      "color": "#ffffff",
      "display": "flex",
      "fontSize": "18px",
      "fontWeight": 700,
      "justifyContent": "center",
      "lineHeight": "48px",
      "minHeight": "48px",
      "paddingLeft": "55px",
      "paddingRight": "55px",
      "textAlign": "center",
      "textTransform": "uppercase",
      "transition": "0.5s ease",
      "width": undefined,
    }
  }
/>
`;
